Make USA country again.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				featureGroup.addTo(map)
 
 				$.getJSON('test-geometries/admin0_poly.json', function(response) {
-					var statesBoundaries = L.geoJson(response, { itemtype: 'AdministrativeArea', geotype: 'shape',
+					var statesBoundaries = L.geoJson(response, { itemtype: 'Country', geotype: 'shape',
 						title: 'United States of America'
 					}).addTo(map)
 					statesBoundaries.annotate()
