Made index.html example work out-of-the-box.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="Malte Reißig, IfL Leipzig">
 
-		<!--link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" /-->
-		<link rel="stylesheet" href="vendor/Leaflet-0.7.7/dist/leaflet.css" />
+		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+		<!-- link rel="stylesheet" href="vendor/Leaflet-0.7.7/dist/leaflet.css" /-->
 		<link rel="stylesheet" href="css/example.css" />
-		<!--link rel="stylesheet" href="css/foundation.min.css" /-->
-		<!--link rel="stylesheet" href="css/viewer-style.css" /-->
+		<!-- link rel="stylesheet" href="css/foundation.min.css" /-->
+		<!-- link rel="stylesheet" href="css/viewer-style.css" /-->
 
-		<!--script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet-src.js"></script-->
-		<script src="vendor/Leaflet-0.7.7/dist/leaflet-src.js"></script>
-		<script src="vendor/jquery-2.2.2.min.js"></script>
+		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+		<script src="https://code.jquery.com/jquery-2.2.3.min.js"
+				integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+		<!-- script src="vendor/Leaflet-0.7.7/dist/leaflet-src.js"></script-->
+		<!-- script src="vendor/jquery-2.2.2.min.js"></script-->
 
 		<script src="Leaflet.annotate.Microdata.js"></script>
-		<!--script src="Leaflet.annotate.Viewer.js"></script-->
+		<!-- script src="Leaflet.annotate.Viewer.js"></script-->
 
 	</head>
 
