--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
 					$('#map').css('height', window.innerHeight + 'px')
 				})
 
+				var imageUrl = 'http://www.lib.utexas.edu/maps/historical/newark_nj_1922.jpg',
+					imageBounds = [[40.712216, -74.22655], [40.773941, -74.12544]];
+
+				L.imageOverlay(imageUrl, imageBounds, {"itemtype": "CreativeWork"}).addTo(map);
+
 			}
 
 			function adjust_map_view() {
