--- a/paris.html
+++ b/paris.html
@@ -36,9 +36,10 @@
 
 		<script type="text/javascript">
 
-			var tileLayerURL = 'https://api.tiles.mapbox.com/v4/maltwisney.91ae9b43/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFsdHdpc25leSIsImEiOiJlODg3M2M5YzFhY2Y2NWMzMmE0Nzk1YWNjMWYwN2U0ZCJ9.b_4gukx7cUR4-spxHbj_Kw'
+			var tileLayerURL = 'https://api.tiles.mapbox.com/v4/maltwisney.0985a8f8/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFsdHdpc25leSIsImEiOiJlODg3M2M5YzFhY2Y2NWMzMmE0Nzk1YWNjMWYwN2U0ZCJ9.b_4gukx7cUR4-spxHbj_Kw'
 
-			var map, tileLayer, featureGroup;
+			var map, tileLayer, featureGroup
+			var sculptureMarkerOptions = { weight: 2, opacity: 0.6, fillColor: "#a9a9a9", fillOpacity: 0.2, lineCap: 'square', color : "#8f1414" }
 
 			function setup_map() {
 
@@ -70,22 +71,7 @@
 					for (var scidx in sculpturesInParis.results.bindings) {
 						var wikidataSculptureData = sculpturesInParis.results.bindings[scidx]
 						if (wikidataSculptureData.coord && wikidataSculptureData.image) {
-							var geosparqlPoint = wikidataSculptureData.coord.value.substr(6)
-							var coordinates = L.latLng(geosparqlPoint.split(" ")[1], geosparqlPoint.split(" ")[0])
-							var imagePath = wikidataSculptureData.image
-							var imageUrl = imagePath.value
-							/** var sculpture = L.circleMarker(coordinates, { // ### improve new colors for angebote rendering
-						            weight: 2, opacity: 0.6, fillColor: "#a9a9a9", fillOpacity: 0.2, lineCap: 'square',
-						            color : "#8f1414", title: wikidataSculptureData.title.value, itemtype: 'CreativeWork',
-						            alt: "Place of a sculpture named " + wikidataSculptureData.title.value })
-								.bindPopup('<h3>' + wikidataSculptureData.title.value + '</h3>' + '<p><img src="'+imageUrl+'"></p>',
-									{ keepInView: true, className: 'sculpture-photo', maxWidth: "auto", minWidth: 320}) */
-							var sculpture = L.marker(coordinates,
-									{ title: wikidataSculptureData.title.value, itemtype: 'CreativeWork'})
-								.bindPopup('<h3>' + wikidataSculptureData.title.value + '</h3>' + '<p><img src="'+imageUrl+'"></p>',
-									{ keepInView: true, className: 'sculpture-photo', maxWidth: "auto"})
-							/** imageBounds = [[40.712216, -74.22655], [40.773941, -74.12544]]; */
-							// L.imageOverlay(imageUrl, imageBounds, {"itemtype": "CreativeWork", "geoprop": "contentLocation"}).addTo(map); */
+							var sculpture = create_sculpture_map_element(wikidataSculptureData)
 							sculpture.addTo(featureGroup)
 						}
 					}
@@ -93,7 +79,50 @@
 					console.warn("Wikidata SPARQL Query FAILED", error)
 				})
 
+				map.on('zoomend', function(event) {
+					var newLevel = event.target._zoom
+					if (newLevel > 16) {
+						console.log('Map Zoom Level Changed', newLevel, "New Circle Marker Radius", 10)
+						featureGroup.eachLayer(function (layer) { layer.setRadius(10) })
+					} else if (newLevel > 15) {
+						console.log('Map Zoom Level Changed', newLevel, "New Circle Marker Radius", 7)
+						featureGroup.eachLayer(function (layer) { layer.setRadius(7) })
+					} else if (newLevel > 14) {
+						console.log('Map Zoom Level Changed', newLevel, "New Circle Marker Radius", 4)
+						featureGroup.eachLayer(function (layer) { layer.setRadius(4) })
+					} else if (newLevel <= 14) {
+						console.log('Map Zoom Level Changed', newLevel, "New Circle Marker Radius", 3)
+						featureGroup.eachLayer(function (layer) { layer.setRadius(4) })
+					}
+				})
 
+
+			}
+
+			function create_sculpture_map_element(wikidataSculptureData) {
+				// L.circleMarker
+				var geosparqlPoint = wikidataSculptureData.coord.value.substr(6)
+				var coordinates = L.latLng(geosparqlPoint.split(" ")[1], geosparqlPoint.split(" ")[0])
+				var photo = wikidataSculptureData.image
+				var yearCreated = wikidataSculptureData.AnneeCreation
+				var createur = wikidataSculptureData.createur
+				var popupSourceLink = 'Source: <a href="'+wikidataSculptureData.item.value+'">Wikidata</a>'
+				var popupTitle = wikidataSculptureData.title.value
+				var popupSubtitle = ''
+				if (yearCreated) popupSubtitle += 'Annee Creation: '+ yearCreated.value
+				if (yearCreated && createur) popupSubtitle += ', '
+				if (createur) popupSubtitle += createur.value
+				var popupContent = '<h3>' + popupTitle + '</h3>' + popupSubtitle + '<p><img src="'+photo.value+'"><br/>'+popupSourceLink+'</p>'
+				var sculpture = L.circleMarker(coordinates, sculptureMarkerOptions).setRadius(3)
+					.bindPopup(popupContent, { keepInView: true, className: 'sculpture-photo', maxWidth: "auto"})
+				L.Util.setOptions(sculpture, { alt: "Place of a sculpture named " + wikidataSculptureData.title.value,
+					itemtype: 'CreativeWork', geoprop: 'contentLocation', title: wikidataSculptureData.title.value })
+				return sculpture
+				/** L.Marker: var sculpture = L.marker(coordinates, { title: wikidataSculptureData.title.value,
+						itemtype: 'CreativeWork', geoprop: 'contentLocation'
+				}).bindPopup(popupContent, { keepInView: true, className: 'sculpture-photo', maxWidth: "auto"})**/
+				/** L.ImageOveraly: imageBounds = [[40.712216, -74.22655], [40.773941, -74.12544]]; */
+				// L.imageOverlay(imageUrl, imageBounds, {"itemtype": "CreativeWork", "geoprop": "contentLocation"}).addTo(map); */
 			}
 
 			function adjust_map_view() {
