Moving changes into new file keeps microdata serialization intact.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -34,7 +34,7 @@
 		<script defer src="/Leaflet.annotate/example/vendor/jquery-2.2.2.min.js"></script>
 
 		<!-- Microdata.js needs to be loaded before Leaflet.annotate.Viewer.js due to a CONSTANT-->
-		<script defer src="/Leaflet.annotate/Leaflet.annotate.Microdata.js"></script>
+		<script defer src="/Leaflet.annotate/Leaflet.annotate.json-ld.js"></script>
 		<script defer src="/Leaflet.annotate/Leaflet.annotate.types.de_DE.js"></script>
 		<!--script defer src="/Leaflet.annotate/Leaflet.annotate.types.en_US.js"></script-->
 
